# provepy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/provepy/: __init__.py  cli.py  generate.py  provepy.py  utils.py
